test/langtools/tools/javac/TryWithResources/PlainTry.out
PlainTry.java:9:9: compiler.err.try.without.catch.finally.or.resource.decls
1 error
